crates/toml/tests/snapshots/invalid/ext/keys/no-eol-6.stderr
TOML parse error at line 1, column 6
  |
1 | 0=0r0=0r=falsefal=false
  |      ^
unexpected key or value, expected newline, `#`

---
TOML parse error at line 1, column 3
  |
1 | 0=0r0=0r=falsefal=false
  |   ^^^
string values must be quoted, expected literal string
